--- a/jy tcdf.ipynb
+++ b/jy tcdf.ipynb
@@ -8,7 +8,19 @@
    "source": [
     "\"\"\"Run TCDF\"\"\"\n",
     "%matplotlib inline\n",
-    "%run -i \"runTCDF.py\" --data demo_dataset.csv"
+    "# WL\n",
+    "%run -i \"runTCDF.py\" --data combined_weather_WL.csv --cuda --significance 1 --plot\n",
+    "# (43 days ~= 1 months)\n",
+    "%run -i \"runTCDF.py\" --data combined_weather_WL.csv --cuda --kernel_size 4 --dilation_coefficient 4 --hidden_layers 4 --significance 1 --plot \n",
+    "# (170 days ~= 5.5 months)\n",
+    "%run -i \"runTCDF.py\" --data combined_weather_WL.csv --cuda --kernel_size 4 --dilation_coefficient 4 --hidden_layers 5 --significance 1 --plot \n",
+    "\n",
+    "# SLA\n",
+    "%run -i \"runTCDF.py\" --data combined_weather_SLA.csv --cuda --significance 1 --plot\n",
+    "# (43 days ~= 1 months)\n",
+    "%run -i \"runTCDF.py\" --data combined_weather_SLA.csv --cuda --kernel_size 4 --dilation_coefficient 4 --hidden_layers 4 --significance 1 --plot \n",
+    "# (170 days ~= 5.5 months)\n",
+    "%run -i \"runTCDF.py\" --data combined_weather_SLA.csv --cuda --kernel_size 4 --dilation_coefficient 4 --hidden_layers 5 --significance 1 --plot "
    ]
   },
   {
